--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -2,6 +2,8 @@ bases:
   - ../../base
   - ../../ciim
   - ../../api
+  - ../../eks
+  - ../../unmanaged-internal-es
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
