Updated ciim to latest

--- a/kubernetes/overlays/dev/ciim-tagged.yml
+++ b/kubernetes/overlays/dev/ciim-tagged.yml
@@ -8,4 +8,4 @@ spec:
     spec:
       containers:
         - name: ciim
-          image: public.ecr.aws/v3w7q3a1/tna-ciim:1.1.0
+          image: public.ecr.aws/v3w7q3a1/tna-ciim:Latest
