added missing vault properties

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -3,6 +3,22 @@ ciim.db.dialect=org.hibernate.dialect.MySQL8Dialect
 ciim.db.driver=com.mysql.cj.jdbc.Driver
 ciim.db.poolSize=25
 
+# CIIM VAULT DB PROPERTIES
+
+ciim.vault.db.url=jdbc:mysql://ciim-internal-db/ciim_vault?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+
+ciim.vault.db.username=ciim
+
+ciim.vault.db.password=xxxx
+
+ciim.vault.db.dialect=org.hibernate.dialect.MySQL8Dialect
+
+ciim.vault.db.driver=com.mysql.cj.jdbc.Driver
+
+ciim.vault.db.poolSize=5
+
+
+
 elasticsearch.cluster=ciim-internal
 elasticsearch.client.host=ciim-internal-es-http.etna
 elasticsearch.index.mappings.config=_default_:data:GenericEsMapping6plus.json|$main:data:GenericEsMapping6plus.json
