Added data directory

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -17,6 +17,8 @@ ciim.vault.db.driver=com.mysql.cj.jdbc.Driver
 
 ciim.vault.db.poolSize=5
 
+# CIIM data directory
+ciim.data.dir=/ciim
 
 
 elasticsearch.cluster=ciim-internal
