Updated Vault DB

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -5,7 +5,7 @@ ciim.db.poolSize=25
 
 # CIIM VAULT DB PROPERTIES
 
-ciim.vault.db.url=jdbc:mysql://ciim-internal-db/ciim_vault?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.vault.db.url=jdbc:mysql://ciim-db-service.etna/ciim_vault?autoReconnect=true&maxReconnects=3&initialTimeout=10
 
 ciim.vault.db.username=ciim
 
