ADded missing properties

--- a/kubernetes/ciim/properties/persisted_default_mpd_image.properties
+++ b/kubernetes/ciim/properties/persisted_default_mpd_image.properties
@@ -1,16 +1,5 @@
-## the default configuration for the image processing
-
-# image artifact specifications
 #w|h|type
-preview=120|120|box
-
-mid=600|600|box
-
-
-large=1200|1200|box
-
-# minimum size to be allowed for processing 
+preview=280|294|width
 #w|h
-minimum.size=300|300
-
+minimum.size=280|280
 publish.originals=false
