--- a/kubernetes/ciim/properties/app_ctx_persisted.properties
+++ b/kubernetes/ciim/properties/app_ctx_persisted.properties
@@ -2,6 +2,21 @@ publication.es.hostname=ciim-public-es-http.etna
 publication.endpoints.enabled=true
 enhancements.enabled=true
 
+processors.iadata.batchUpdate.s3.accessKey=test
+
+processors.iadata.batchUpdate.s3.secretAccessKey=test
+
+processors.iadata.batchUpdate.s3.roleArn=test
+
+processors.iadata.batchUpdate.s3.bucket=test
+
+
+processors.iadata.batchUpdate.s3.region=test
+
+processors.iadata.batchUpdate.s3.prefix=test
+
+
+
 wagtail.es.hostname=es.master-7rqtwti-tvehemlvvjb4k.uk-1.platformsh.site
 wagtail.es.scheme=https
 wagtail.es.port=443
