--- a/kubernetes/ciim/properties/persisted_default_mpd_zoom.properties
+++ b/kubernetes/ciim/properties/persisted_default_mpd_zoom.properties
@@ -1,24 +1,8 @@
-#minimum source size for zoom images
-zoom.minimum.size=1200|1200
-
-# if specified this will be used as a complex workflow to check whether the image is suitable
-zoom.analysis.class=
-
-#locations to be coped to using file copy
+zoom.minimum.size=300|300
 zoom.local.locations=/ciim/ciim-media/zooms
-
-# the type of compression applied to the layers
 zoom.compression=JPEG
-
-# the tile x dimension
-zoom.tile.x=128
-
-# the tile y dimension
-zoom.tile.y=128
-
-# the zoom colour type
+zoom.tile.x=256
+zoom.tile.y=256
 zoom.colour.type=TrueColor
-
-# this will only analyse the zooms
-zoom.analyse.only=false
+zoom.analyse.only=true
 
