--- a/kubernetes/ciim/ciim.yml
+++ b/kubernetes/ciim/ciim.yml
@@ -37,9 +37,9 @@ spec:
             name: ciim-config
       initContainers:
         - name: set-ciim-permissions
-          image: registry.hub.docker.com/library/busybox:1.36.0
+          image: registry.hub.docker.com/library/busybox:latest
           imagePullPolicy: IfNotPresent
-          command: [ 'sh', '-c', 'chmod -R 777 /ciim' ]
+          command: [ 'sh', '-c', 'chmod -R 777 /usr/local/ciim/' ]
           volumeMounts:
             - name: ciim-logging-data
               mountPath: usr/local/ciim/tomcat/logs
