--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -18,7 +18,7 @@ ciim.vault.db.driver=com.mysql.cj.jdbc.Driver
 ciim.vault.db.poolSize=5
 
 # CIIM data directory
-ciim.data.dir=usr/local/ciim
+ciim.data.dir=/usr/local/ciim
 
 
 elasticsearch.cluster=ciim-internal
