updated mounts due to new base image

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -18,7 +18,7 @@ ciim.vault.db.driver=com.mysql.cj.jdbc.Driver
 ciim.vault.db.poolSize=5
 
 # CIIM data directory
-ciim.data.dir=/usr/local/ciim
+ciim.data.dir=/ciim
 
 
 elasticsearch.cluster=ciim-internal
@@ -26,7 +26,7 @@ elasticsearch.client.host=ciim-internal-es-http.etna
 
 media.process.files=false
 media.zoom.processing.enabled=false
-media.ciim.dir=usr/local/ciim/ciim-media
+media.ciim.dir=/ciim/ciim-media
 media.processing.timeout=180000
 media.filesystem.usage.limit=90
 media.gmagick.path=gm
@@ -37,9 +37,9 @@ processing.default.validator=com.k_int.ciim.core.tna.Validator
 processing.default.stream=tna|tna|TNA Default Stream|com.k_int.ciim.core.tna.Validator
 processing.default.idgenerator=com.k_int.ciim.commons.id.BasicIdGenerator
 
-processing.temp.directory=usr/local/ciim/ciim-temp
-processing.persistence.directory=usr/local/ciim/ciim-persistence
-processing.batch.directory=usr/local/ciim/ciim-batches
+processing.temp.directory=/ciim/ciim-temp
+processing.persistence.directory=/ciim/ciim-persistence
+processing.batch.directory=/ciim/ciim-batches
 
 rsync.location=rsync
 ssh.command.location=ssh
