--- a/kubernetes/ciim/ciim.yml
+++ b/kubernetes/ciim/ciim.yml
@@ -49,6 +49,8 @@ spec:
               mountPath: /ciim/ciim-temp
             - name: ciim-media-data
               mountPath: /ciim/ciim-media
+            - name: ciim-persistence-data
+              mountPath: /ciim/ciim-persistence
       containers:
         - name: ciim
           image: public.ecr.aws/v3w7q3a1/tna-ciim:1.1.0
@@ -68,6 +70,8 @@ spec:
               mountPath: /ciim/ciim-temp
             - name: ciim-media-data
               mountPath: /ciim/ciim-media
+            - name: ciim-persistence-data
+              mountPath: /ciim/ciim-persistence
           envFrom:
             - secretRef:
                 name: ciim-mysql-creds
