added persistence directory

--- a/kubernetes/ciim/ciim.yml
+++ b/kubernetes/ciim/ciim.yml
@@ -155,6 +155,18 @@ spec:
       storage: 100Gi
 ---
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ciim-persistence-data-pvc
+  namespace: etna
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Gi
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: ciim-service
