added persistence directory

--- a/kubernetes/ciim/ciim.yml
+++ b/kubernetes/ciim/ciim.yml
@@ -32,6 +32,9 @@ spec:
         - name: ciim-media-data
           persistentVolumeClaim:
             claimName: ciim-media-data-pvc
+        - name: ciim-persistence-data
+          persistentVolumeClaim:
+            claimName: ciim-persistence-data-pvc
         - name: ciim-config
           configMap:
             name: ciim-config
@@ -49,6 +52,8 @@ spec:
               mountPath: /ciim/ciim-temp
             - name: ciim-media-data
               mountPath: /ciim/ciim-media
+            - name: ciim-persistence-data
+              mountPath: /ciim/ciim-persistence
       containers:
         - name: ciim
           image: public.ecr.aws/v3w7q3a1/tna-ciim:1.1.0
@@ -68,6 +73,8 @@ spec:
               mountPath: /ciim/ciim-temp
             - name: ciim-media-data
               mountPath: /ciim/ciim-media
+            - name: ciim-persistence-data
+              mountPath: /ciim/ciim-persistence
           envFrom:
             - secretRef:
                 name: ciim-mysql-creds
