--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -4,6 +4,7 @@ bases:
   - ../../api
   - ../../eks
   - ../../unmanaged-internal-es
+  - ../../rosetta
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
