issue with rosetta image?

--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -30,7 +30,7 @@ rosetta:
         type: elasticsearch
         domainConverter: es-converter
         properties:
-          host: ciim-public-es-http.etna
+          host: ciim-internal-es-http.etna
           port: 9200
           index: ciim
           username: elastic
