--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -6,13 +6,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: kong
     konghq.com/plugins: etna-apikey-auth
+    konghq.com/strip-path: true
 spec:
   rules:
     - http:
         paths:
           - path: /api/v1/data
             pathType: Prefix
-            stripPath: true
             backend:
               service:
                 name: rosetta-service
