--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -6,19 +6,12 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: kong
     konghq.com/plugins: etna-apikey-auth
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
 spec:
   rules:
     - http:
         paths:
-          - path: /api/v1/data
-            pathType: Prefix
-            backend:
-              service:
-                name: rosetta-service
-                port:
-                  name: rosetta-port
-          - path: /api/v1/?(.*)/
+          - path: /api/v1/data/?(.*)
             pathType: Prefix
             backend:
               service:
