--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -6,12 +6,12 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: kong
     konghq.com/plugins: etna-apikey-auth
-    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
+    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$2
 spec:
   rules:
     - http:
         paths:
-          - path: /api/v1/data/?(.*)
+          - path: /api/v1/data/(.*)
             pathType: Prefix
             backend:
               service:
