--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: kong
     konghq.com/plugins: etna-apikey-auth
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
 spec:
   rules:
