--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -19,3 +19,10 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /api/v1/
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
