updated ingress path rewrite

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -3,6 +3,7 @@ bases:
   - ../../ciim
   - ../../eks
   - ../../unmanaged-internal-es
+  - ../../unmanaged-public-es
   - ../../rosetta
 commonAnnotations:
   environment: dev
