--- a/kubernetes/unmanaged-public-es/kustomization.yml
+++ b/kubernetes/unmanaged-public-es/kustomization.yml
@@ -2,7 +2,7 @@ namespace: etna
 resources:
   - public-es.yml
 configMapGenerator:
-  - name: dictionaries
+  - name: esdictionaries
     files:
       - ./synonym.txt
 # This is necessary because kustomize assumes it is also creating the pod, which it isn't in this case as
