--- a/kubernetes/rosetta/rosetta.yml
+++ b/kubernetes/rosetta/rosetta.yml
@@ -41,7 +41,7 @@ spec:
             - name: rosetta-config
               mountPath: /rosetta/config
             - name: plugin-rosetta
-              mountPath: /rosetta/plugin
+              mountPath: /rosetta/plugins
           env:
             - name: JAVA_OPTS
               value: "-Dspring.profiles.active=non-default-for-trace-logging -XX:MaxRAMPercentage=80.0 -XX:+PrintFlagsFinal -XX:+UseZGC"
