updated path to jpt.json

--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -35,7 +35,7 @@ rosetta:
         type: jpt
         properties:
           mutable: true
-          file: ./config/jpt.json
+          file: /config/jpt.json
           input: source
           output: detail
   provider:
