--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -37,7 +37,7 @@ rosetta:
           mutable: true
           file: ./config/jpt.json
           input: source
-          output: template
+          output: detail
   provider:
     providers:
       - name: elasticsearch
