Updated ciim sizing

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -47,3 +47,5 @@ ssh.command.location=ssh
 # the number of threads dedicated specifically to indexing
 # when 0 the indexing shares the thread pool with processing
 media.gmagick.processes=3
+
+processing.thread.pool.size=8
